fix button alignment, small styling changes

--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,17 @@ text {
   height:800px;
 }
 
+.page-header
+{
+  margin-top:0;
+}
 .page-header span
 {
   margin:0 auto;
-  display: block
+  display: block;
+  font-style: italic;
+  font-family: "Georgia", Arial, sans-serif;
+  
 }
 
 .page-header h1
@@ -144,9 +151,20 @@ text {
   padding:0;
 }
 
+.btn
+{
+  background-color:#b6c8e0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  color:#666;
+
+}
+
 h1,h2,h3,h4
 {
   font-family: "Open Sans", Arial,sans-serif;
+  color: #000;
+  letter-spacing: -1px;
 }
 
 #legend ul
